// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`android template generates dark colors 1`] = `
Array [
  Array [
    "values/colors.xml",
    "<?xml version=\\"1.0\\"?>
<resources>
  <!--Generated code starts changes will be overridden-->
  <color name=\\"rnpc_string_color\\">#ffffff</color>
  <color name=\\"rnpc_alpha_color\\">#80ff0000</color>
  <!--Generated code ends-->
  <color name=\\"background\\">#ffffff</color>
  <color name=\\"text\\">#000000</color>
  <color name=\\"accent\\">#ffc0cb</color>
  <color name=\\"contrasted\\">#99cccccc</color>
</resources>",
  ],
  Array [
    "values-night/colors.xml",
    "<?xml version=\\"1.0\\"?>
<resources>
  <!--Generated code starts changes will be overridden-->
  <color name=\\"rnpc_string_color\\">#000000</color>
  <color name=\\"rnpc_alpha_color\\">#80ffc8c8</color>
  <!--Generated code ends-->
  <color name=\\"background\\">#000000</color>
  <color name=\\"text\\">#ffffff</color>
  <color name=\\"contrasted\\">#99333333</color>
</resources>",
  ],
]
`;

exports[`android template generates light colors 1`] = `
Array [
  Array [
    "values/colors.xml",
    "<?xml version=\\"1.0\\"?>
<resources>
  <!--Generated code starts changes will be overridden-->
  <color name=\\"rnpc_string_color\\">#ffffff</color>
  <color name=\\"rnpc_alpha_color\\">#80ff0000</color>
  <color name=\\"rnpc_named_color\\">#0000ff</color>
  <!--Generated code ends-->
  <color name=\\"background\\">#ffffff</color>
  <color name=\\"text\\">#000000</color>
  <color name=\\"accent\\">#ffc0cb</color>
  <color name=\\"contrasted\\">#99cccccc</color>
</resources>",
  ],
]
`;
